@@ -1,6 +1,7 @@
 #ifndef GRCONFIG_H_
 #define GRCONFIG_H_
 
+#define GR_FONT_SIZE        14
 #define GR_MAX_SATURATIONS  8
 #define GR_MAX_CONVERSIONS  16
 
